# spark-matcher-rs

./: .dockerignore  .env-example  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  buysell.txt  docker-compose.yml  shell.nix
migrations/: 01_create_schema.sql
src/: common.rs  constants.rs  error.rs  log.rs  logger.rs  main.rs  matcher.rs  orderbook_utils.rs  websocket.rs
src/api/: subscription.rs
src/config/: env.rs  mod.rs
src/management/: manager.rs
src/market/: bot.rs  matcher.rs  mod.rs
src/model/: mod.rs  spot_order.rs
src/random/: mod.rs  random_generator.rs
src/util/: logging.rs
src/web/: routes.rs  server.rs
src/websocket/: client.rs
src/websocket/clients/: envio.rs  mod.rs  superchain.rs
