[package]
name = "spark-matcher"
description = "A Rust version of the spark-matcher project."
version = "0.1.0"
edition = "2021"
authors = ["Oleksii Kshenskyi <oleksii.kshenskyi@uatechpeople.com>"]
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.64", features = ["fuel-core-lib"] }
rand = "0.8.5"
tokio = { version = "1.12", features = ["rt", "macros"] }
spark-market-sdk = { git = "https://github.com/compolabs/orderbook-contract.git", branch = "feat-contract-split", package = "spark-market-sdk" }

dotenv = "0.15.0"
hex = "0.4"
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
log = "0.4.21"
fern = "0.6.2"
chrono = "0.4.38"
itertools = "0.13.0"

[[bin]]
name = "spark-matcher"
path = "src/main.rs"
