[package]
name = "spark-matcher"
description = "small matcher on rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.64", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros", "time"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio-tungstenite = "0.17.1"
futures-util = "0.3"
anyhow = "1.0.82"
log = "0.4.21"
fern = "0.6.2"
chrono = "0.4.38"
url = "2.3.1"
dotenv = "0.15.0"
hex = "0.4"
itertools = "0.13.0"

spark-market-sdk = { git = "https://github.com/compolabs/orderbook-contract.git", branch = "feat-contract-split", package = "spark-market-sdk" }

[[bin]]
name = "spark-matcher"
path = "src/main.rs"
