[package]
name = "spark-matcher"
description = "small matcher on rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
dotenv = "0.15.0"
fern = "0.6.2"
fuels = { version = "0.64", features = ["fuel-core-lib"] }
futures-util = "0.3"
hex = "0.4"
itertools = "0.13.0"
log = "0.4.21"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.62"
tokio = { version = "1.12", features = ["rt", "macros", "time"] }
tokio-tungstenite = "0.17.1"
url = "2.3.1"
schemars = "0.8.0"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }

spark-market-sdk = { git = "https://github.com/compolabs/orderbook-contract.git", branch = "feat-contract-split", package = "spark-market-sdk" }


[[bin]]
name = "spark-matcher"
path = "src/main.rs"
